# django-rest

./: README.md  pyproject.toml
mysite/myapi/: models.py  urls.py  views.py
mysite/myapi/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
